# XimeaCameraResetter

./: CMakeLists.txt  main.cpp
